# crypto_lakehouse

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  spark-tests.yml
airflow/: Dockerfile
airflow/dags/: backfill_pipeline.py  batch_pipeline.py  example_dag.py
airflow/plugins/lakehouse/: __init__.py  alerts.py  spark_compose.py
consumer/: config.py  schema.py  verify.py
dashboard/: Dockerfile
docs/: airflow.md  backfill.md  bronze_ingest.md  coinbase_websocket_schema.md  data_contract.md  data_layout.md  data_quality.md  gold_aggregate.md  idempotency.md  kafka_setup.md  minio_setup.md  observability.md  runbook.md  serving.md  silver_transform.md  spark_delta_minio.md  speed_layer.md
docs/adr/: 0001-record-architecture-decisions.md  0002-data-source-coinbase-websocket.md  0003-ingestion-kafka-kraft.md  0004-object-storage-minio.md  0005-table-format-delta-lake.md  0006-lambda-architecture.md  0007-processing-engine-spark.md  0008-data-contract-pydantic.md  0009-partitioning-strategy.md  0010-zorder-vs-liquid-clustering.md  0011-minio-image-chainguard.md  0012-orchestration-airflow.md  0013-observability-approach.md  0014-serving-api-fastapi-deltars.md  README.md  template.md
producer/: Dockerfile  __init__.py  config.py  explore_feed.py  main.py
scripts/: create_topics.sh
serving/: Dockerfile  __init__.py  config.py  main.py  models.py  store.py
spark_jobs/: Dockerfile  backfill.py  bronze_ingest.py  common.py  counts.py  dq.py  dq_validate.py  gold_aggregate.py  idempotent.py  liquid_cluster_probe.py  metrics_report.py  observe.py  optimize.py  prove_idempotency.py  silver_batch.py  silver_transform.py  speed_metrics.py  test_delta.py
tests/: conftest.py  test_alerts.py  test_observe.py  test_producer.py  test_schema.py  test_serving.py  test_smoke.py
tests/spark/: conftest.py  test_dq_spark.py  test_transformations_spark.py
