[project]
name = "crypto-lakehouse"
version = "0.1.0"
description = "Real-time crypto market data lakehouse: Coinbase WS -> Kafka -> Spark -> Delta on MinIO -> FastAPI, built as a Lambda architecture."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "Patrick Callahan", email = "patrickcallah@gmail.com" }]

# Each service (producer, spark_jobs, serving, dashboard) adds only the deps it
# actually uses, so we never ship libraries a service doesn't need.
dependencies = [
    "confluent-kafka>=2.15.0",
    "websockets>=16.0",
    # Data contract / schema validation at the ingestion boundary.
    "pydantic>=2.7",
]

# PEP 735 dependency group for local development tooling.
# Installed with `uv sync` but never shipped in service images.
[dependency-groups]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov>=5",
    "pre-commit>=3.7",
    "httpx>=0.27",           # Starlette TestClient transport (serving API tests)
    { include-group = "serving" },
]
# Serving layer: a JVM-free FastAPI API that reads the gold Delta tables directly
# via delta-rs (no Spark in the request path). Included in `dev` so the gate can
# import and test it; installed on its own in the serving image.
serving = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "deltalake>=1.0",
    # delta-rs 1.x hands back Arrow via arro3; pyarrow gives us the mature
    # dataset API (column projection + predicate pushdown) used in the store.
    "pyarrow>=17",
]
# JVM-backed tier: real Spark transformation + DQ tests (tests/spark/).
# Kept out of the default dev group so the fast `make check` gate needs no JVM;
# install with `uv sync --group spark` and run via `make test-spark`.
spark = [
    "pyspark==3.5.3",
    "delta-spark==3.2.0",
]

[tool.uv]
# This repo is a collection of services, not an installable library,
# so uv should not try to build/install the root project itself.
package = false
# Always use a uv-managed (downloaded) Python interpreter, never a system one.
# This guarantees a native, architecture-consistent toolchain for everyone who
# builds the project and avoids Intel/arm64 mismatches on Apple Silicon.
python-preference = "only-managed"

# ------------------------------------------------------------------
# Ruff: linter + formatter (replaces black, isort, flake8, and more)
# ------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["airflow/dags", "airflow/plugins"]

[tool.ruff.lint]
# A pragmatic-but-strict rule set. Each code is a family of checks:
#   E/W  pycodestyle, F pyflakes, I import sorting, UP pyupgrade,
#   B bugbear, SIM simplifications, C4 comprehensions, PTH prefer pathlib,
#   RUF ruff-specific.
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Spark Docker image ships Python 3.10; datetime.UTC is 3.11+.
"spark_jobs/**/*.py" = ["UP017"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom puts callables in argument defaults
# (Depends/Query/Path); that's intentional, not the B008 mutable-default bug.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.ruff.format]
docstring-code-format = true

# ------------------------------------------------------------------
# mypy: static type checking (strict from day one)
# ------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
# Pydantic's mypy plugin teaches mypy about model fields, validators, and the
# generated __init__ so the data contract is fully type-checked.
plugins = ["pydantic.mypy"]
# Only list directories that currently contain code; expand this list as
# each service (spark_jobs, dashboard) gains real modules.
files = ["producer", "consumer", "serving", "tests"]
# The Spark tier imports pyspark + spark_jobs modules that aren't type-checked
# here; it has its own runtime guardrails, so keep it out of the strict gate.
exclude = ["tests/spark/"]

# confluent-kafka ships no type stubs; treat it as untyped instead of erroring.
[[tool.mypy.overrides]]
module = ["confluent_kafka.*"]
ignore_missing_imports = true

# pyspark ships no stubs; type hints that reference it degrade to Any.
[[tool.mypy.overrides]]
module = ["pyspark.*"]
ignore_missing_imports = true

# Serving reads Delta via delta-rs + pyarrow; neither ships complete stubs.
[[tool.mypy.overrides]]
module = ["deltalake.*", "pyarrow.*"]
ignore_missing_imports = true

# spark_jobs/airflow-plugin modules live outside the type-checked set. Tests may
# import their pure helpers; treat those imports as untyped rather than checking
# the (JVM-dependent) modules themselves.
[[tool.mypy.overrides]]
module = ["observe", "lakehouse.*"]
follow_imports = "skip"
ignore_missing_imports = true

# ------------------------------------------------------------------
# pytest
# ------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
# Put the repo root + source roots on sys.path so tests can import services and
# the pure helpers in spark_jobs / airflow plugins without installing packages
# (we run everything from source; uv package=false).
# The JVM-backed tests under tests/spark are auto-skipped when pyspark is absent
# (see tests/conftest.py); run them with `make test-spark`.
pythonpath = [".", "spark_jobs", "airflow/plugins"]
